Version 1.14 - 2017-11-09
* BUG#6845 set bank_fees default value to 0
* BUG#7264 avoid, not supported, concurrent calls to scipy

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Module creation