@@ -37,8 +37,6 @@ coog_dep_main() { # install base deps
                 "redis==2.10.6" \
                 "hiredis==0.2.0" \
                 "msgpack-python==0.4.8" \
-                "numpy==1.13.1" \
-                "scipy==0.19.1" \
                 "uwsgi==2.0.15" \
                 "rq==0.8.2" \
                 "celery==4.1.0" \
