@@ -1,3 +1,5 @@
+* FEA#8267 enlever la dépendance scipy
+
 Version 1.14 - 2017-11-09
 * BUG#6845 definir la valeur par defaut de bank_fees à 0
 * BUG#7264 éviter les appels concurrents à scipy (pas supporté)
