@@ -1,3 +1,5 @@
+* FEA#8267 remove scipy dependency
+
 Version 1.14 - 2017-11-09
 * BUG#6845 set bank_fees default value to 0
 * BUG#7264 avoid, not supported, concurrent calls to scipy
